--- a/xroc3.ipynb
+++ b/xroc3.ipynb
@@ -34,7 +34,7 @@
         "id": "cmbtuEyk3IgH"
       },
       "source": [
-        "# **MINER**"
+        "# **BISMILAH-RUNNER**"
       ]
     },
     {
