--- a/random-20222.ipynb
+++ b/random-20222.ipynb
@@ -3,8 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled0.ipynb",
-      "provenance": []
+      "name": "xroc2.ipynb",
+      "provenance": [],
+      "authorship_tag": "ABX9TyNmyuUpgFvgKetITFQoV0W9",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -12,12 +14,22 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/d-crypto99/edanturun/main/random-20222.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "Rh-nd3WynT5K"
       },
